optimize mass indexing encoders add subprocess indexing jobs